[package]
edition = "2021"
name = "sna41-motorshield"
categories = ["embedded", "no-std"]
version = "0.1.0"


[dependencies]
embedded-hal = "0.2.7"
pwm-pca9685 = "0.3.1"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
# rppal = { version = "0.14.1", features = ["hal"] }
linux-embedded-hal = "0.3.2"
pwm-pca9685 = "0.3.1"
